--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Franklin = "713c75ef-9fc9-4b05-94a9-213340da978e"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 GeoJSON = "61d90e0f-e114-555e-ac52-39dfb47a3ef9"
 GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
