--- a/__site/Project.toml
+++ b/__site/Project.toml
@@ -1,6 +1,7 @@
 name = "Census"
 uuid = "df14e3b5-dab4-49a2-a442-991725e94982"
 version = "0.1.0"
+
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
@@ -16,9 +17,11 @@ Franklin = "713c75ef-9fc9-4b05-94a9-213340da978e"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 GeoJSON = "61d90e0f-e114-555e-ac52-39dfb47a3ef9"
 GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
