--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,11 @@ Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+RSetup = "d73537e9-64d3-4f49-9d69-a310b603d8ca"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
