--- a/Project.toml
+++ b/Project.toml
@@ -34,10 +34,10 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Proj = "c94c279d-25a6-4763-9509-64d165bea63e"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
@@ -80,12 +80,12 @@ LibGEOS = "0.9"
 LibPQ = "1.15"
 Measures = "0.3"
 NodeJS = "2.0"
-PlotlyJS = "0.18"
 Plots = "1.39"
 Polynomials = "4.0"
 PrettyTables = "2.3"
 RCall = "0.13"
 RDatasets = "0.7"
+Statistics = "1.11.1"
 StatsBase = "0.34"
 StatsPlots = "0.15"
 StringEncodings = "0.3"
@@ -94,7 +94,7 @@ WebIO = "0.8"
 WellKnownGeometry = "0.2"
 XLSX = "0.9, 0.10"
 ZipFile = "0.10"
-julia = "1.9"
+julia = "1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
